--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    </head>
    <body class="bgg">
 
-      <div id="preloader">
+      <div id="loading-page ">
 
     
         <div class="loading-page">
@@ -62,11 +62,11 @@
      );
 
 
-     var loader = document.getElementById("preloader");
+     var loader = document.getElementById("loading-page");
 
-window.addEventListener("load", function(){
-   loader.style.display = "none";
-})
+     window.addEventListener("load", function(){
+      loader.style.display = "none";
+   })
      </script>
 
       </div>
