--- a/index.html
+++ b/index.html
@@ -35,17 +35,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"
         integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        
         <script>
-         gsap.fromTo(
-       ".loading-page",
-       { opacity: 1 },
-       {
-         opacity: 0,
-         display: "none",
-         duration: 1.5,
-         delay: 3.5,
-       }
-     );
+
      
      gsap.fromTo(
        ".logo-name",
@@ -60,13 +52,14 @@
          delay: 0.5,
        }
      );
-
+     </script>
+     <script>
 
      var loader = document.getElementById("loading-page");
 
-     window.addEventListener("load", function(){
-      loader.style.display = "none";
-   })
+window.addEventListener("load", function(){
+ loader.style.display = "none";
+})
      </script>
 
       </div>
