--- a/index.html
+++ b/index.html
@@ -57,8 +57,16 @@
 
      var loader = document.getElementById("loading-page");
 
-window.addEventListener("load", function(){
- loader.style.display = "none";
+window.addEventListener("load", function(){         gsap.fromTo(
+       ".loading-page",
+       { opacity: 1 },
+       {
+         opacity: 0,
+         display: "none",
+         duration: 1.5,
+         delay: 3.5,
+       }
+     );
 })
      </script>
 
